[package]
name = "neuro-divergent-models"
version = "0.1.0"
edition = "2021"
authors = ["rUv Contributors"]
description = "Neural forecasting models implemented using ruv-FANN for time series forecasting"
repository = "https://github.com/ruvnet/ruv-FANN"
license = "MIT OR Apache-2.0"
keywords = ["neural-network", "time-series", "forecasting", "lstm", "rnn"]
categories = ["science", "algorithms", "mathematics"]

[dependencies]
# Core ruv-FANN dependency
ruv-fann = "0.1.6"

# Essential dependencies
num-traits = "0.2.19"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.142", optional = true }

# Time series and data handling
chrono = { version = "0.4.41", features = ["serde"] }
polars = { version = "0.45.1", features = ["lazy", "temporal", "csv", "parquet"], optional = true }

# Mathematical operations
ndarray = { version = "0.16.1", features = ["rayon"] }
nalgebra = { version = "0.34.0", optional = true }

# Parallel processing
rayon = { version = "1.10.0", optional = true }

# Random number generation
rand = { version = "0.8.5", features = ["small_rng"] }
rand_distr = "0.5.1"
rand_chacha = "0.3.1"

# Logging
log = "0.4.27"

# Serialization
bincode = "1.3.3"

# Testing and development
approx = { version = "0.5", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
proptest = "1.7.0"
approx = "0.5.1"
pretty_assertions = "1.4.1"
tokio = { version = "1.47.1", features = ["full"] }

[features]
default = ["std", "serde", "polars"]
std = []
serde = ["dep:serde", "dep:serde_json", "ruv-fann/serde"]
polars = ["dep:polars"]
nalgebra = ["dep:nalgebra"]
parallel = ["dep:rayon", "ruv-fann/parallel"]
testing = ["dep:approx"]

# Specialized model features
recurrent = []
transformer = []
specialized = []

[[example]]
name = "basic_lstm"
path = "examples/basic_lstm.rs"

[[example]]
name = "time_series_forecasting"
path = "examples/time_series_forecasting.rs"

