[package]
name = "neuro-divergent-registry"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Model factory and registry system for dynamic neural network model creation and management"
keywords = ["neural-networks", "forecasting", "machine-learning", "registry", "factory"]
categories = ["algorithms", "science"]

[dependencies]
# Serialization
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.142"
bincode = "2.0.1"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

# Collections and utilities
indexmap = "2.7.0"
once_cell = "1.20.2"
parking_lot = "0.12.4"

# Async support
tokio = { version = "1.47.1", features = ["full"], optional = true }
futures = { version = "0.3.31", optional = true }

# Logging
log = "0.4.27"
tracing = "0.1.41"

# Dynamic loading
libloading = { version = "0.8.5", optional = true }

# Configuration
config = "0.14.1"
toml = "0.8.22"

# Hashing
ahash = "0.8.12"
sha2 = "0.10.8"

# Benchmarking
criterion = { version = "0.5.1", optional = true }
instant = "0.1.13"

# Math and numerics
num-traits = "0.2.19"

# Path handling
dirs = "5.0.1"
walkdir = "2.5.0"

# Compression for model storage
flate2 = "1.1.2"
tar = "0.4.44"

[features]
default = ["std"]
std = []
async = ["tokio", "futures"]
benchmarks = ["criterion"]
plugin-system = ["libloading"]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
tempfile = "3.15.0"
env_logger = "0.11.6"


[lib]
name = "neuro_divergent_registry"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]